homepage UI - comments, modal window, userprofile

--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -19,22 +19,17 @@
 
           <h4 class="ui teal image header"><label for="time">Choose a time for your event:</label></h4>
           <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
-<<<<<<< HEAD
 
           <h4 class="ui teal image header"><label for="description">Location or Link (virtual activity)</label></h4><br>
           <input type="text" id="description-bar" name="description" placeholder="Add an address for the event or URL for the virtual meetup" /><br>
           
           <h4 class="ui teal image header"><label for="quantity">Group Size</label></h4><br>
-          <input type="number" id="quantity" name="quantity" placeholder="How many people can join your activity?" /><br><br>
-
-          <input type="submit" value="Submit" class="ui fluid large teal submit button">         
-=======
-          <input type="file" name="photo" /><br>
-          <label for="title">Acticity Type</label><br>
+          <input type="number" id="quantity" name="group" placeholder="How many people can join your activity?" /><br><br>
+          
+          <h4 class="ui teal image header"><label for="title">Acticity Type</label></h4><br>
           <input  type="radio" value="outdoor" name="tag"> Outdoor Activity<br>
-          <input type="radio" value="virtual" name="tag"> Virtual Activity<br>
+          <input type="radio" value="virtual" name="tag"> Virtual Activity<br><br>
           <input type="submit" value="Submit" class="ui fluid large teal submit button">
->>>>>>> develop
         </div>
       </form>
     </div>
