--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
             {{#if loggedIn}}
             <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
-                   <h3 class="ui teal image header">Add an activity</h3>
+                   <h3 class="ui teal image header">+ Activity</h3>
                 </a>
             </div>
 
