--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,35 +21,30 @@
     <section class="nav-sec">
         <div class="d-flex justify-content-between">
             <div class="p-2 nav-icon-lg mint-green">
-                <a class="nav-icon" href="/"><em class="fa fa-home"></em>
-                    <span> 🏠 </span>
-                    <h3>Home</h3>
+                <a class="nav-icon" href="/">
+                    <h3 class="ui teal image header">Home</h3>
                 </a>
             </div>
             {{#if loggedIn}}
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
-                    <span> + </span>
-                    <h3>Add an activity</h3>
+                <a class="nav-icon" href="/create-post">
+                    <h3 class="ui teal image header">+ Activity</h3>
                 </a>
             </div>
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/my-activities"><i class="fa fa-heart"></i>
-                    <span> 💚 </span>
-                    <h3>My activities</h3>
+                <a class="nav-icon" href="/my-activities">
+                    <h3 class="ui teal image header">My activities</h3>
                 </a>
             </div>
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/logout"><i class="fa fa-minus"></i>
-                    <span> ⚪️ </span>
-                    <h3>Logout</h3>
+                <a class="nav-icon" href="/logout">
+                    <h3 class="ui teal image header">Logout</h3>
                 </a>
             </div>
             {{else}}
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/login"><i class="fa fa-minus"></i>
-                    <span> ⚪️ </span>
-                    <h3>Login</h3>
+                <a class="nav-icon" href="/login">
+                    <h3 class="ui teal image header">Login</h3>
                 </a>
             </div>
             {{/if}}
