--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,15 +1,4 @@
-<div class="ui stackable two column very relaxed grid container" style="position:relative;">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <div class="ui segment">
-        <img src="assets/images/Login-view2.png" class="style=width:360px; height:500px;" />
-
-      </div>
-    </h2>
-  </div>
-
-  <div class="container">
-  </div>
+{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
   <!-- signup  -->
   <div class="column">
     <div class="ui segment">
@@ -39,6 +28,32 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
+
+<section class="login">
+  <div class="container">
+    <div class="banner-content">
+
+      <form class="signup-form"> <br>
+        <h3 class="form-signin-heading ui teal image header">Register your account</h3><br>
+        <div class="form-group">
+          <label for="username-login"> Username:</label>
+          <input type="text" id="username-signup" type="text" class="form-control" placeholder="Username" />
+        </div>
+        <div class="form-group">
+          <label for="password-signup">
+            <h3>Password:</h3>
+          </label>
+          <input type="password" class="form-control" id="password-signup" placeholder="Password" />
+        </div>
+        <button class="kafe-btn mint-blue btn-block" type="submit">
+          <h3> Sign up </h3>
+        </button>
+        <br />
+        <a class="btn" href="/login" role="button">Already have an account? Click here.</a>
+      </form>
+    </div>
+  </div>
+</section>
 
 <script src="/javascript/sign-up.js"></script>
