--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,29 +22,29 @@
         <div class="d-flex justify-content-between">
             <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/">
-                    <h3 class="ui teal image header">Home</h3>
+                    <h2 class="ui white image header">Home</h2>
                 </a>
             </div>
             {{#if loggedIn}}
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/create-post">
-                    <h3 class="ui teal image header">+ Activity</h3>
+                    <h2 class="ui white image header">+ Activity</h2>
                 </a>
             </div>
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/my-activities">
-                    <h3 class="ui teal image header">My activities</h3>
+                    <h2 class="ui white image header">My activities</h2>
                 </a>
             </div>
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/logout">
-                    <h3 class="ui teal image header">Logout</h3>
+                    <h2 class="ui white image header">Logout</h2>
                 </a>
             </div>
             {{else}}
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/login">
-                    <h3 class="ui teal image header">Login</h3>
+                    <h2 class="ui white image header">Login</h2>
                 </a>
             </div>
             {{/if}}
