--- a/views/edit-activity.handlebars
+++ b/views/edit-activity.handlebars
@@ -1,17 +1,19 @@
-<article>
-  <a href="/my-activities"> &larr; Back to my activites</a>
-  <h2>
-    Edit Activity
-  </h2>
-  <form class="edit-activity-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input name="post-title" type="text" value="{{post.title}}" />
-    </div>
-    <button type="submit">Save activity</button>
-    <button type="button" class="delete-post-btn">Delete activity</button>
-  </form>
-</article>
+<div class="container">
+  <div class="banner-content">
+    <a href="/my-activities"> &larr; Back to my activites</a>
+    <h2 class="form-signin-heading ui teal image header">
+      Edit Activity
+    </h2>
+    <form class="edit-activity-form">
+      <div class="form-group">
+        <label for="post-title" class="ui teal header">Title</label><br>
+        <input name="post-title" type="text" value="{{post.title}}" />
+      </div>
+      <button type="submit" class="kafe-btn mint-blue btn-block">Save activity</button>
+      <button type="button" class="delete-post-btn kafe-btn mint-blue btn-block">Delete activity</button>
+    </form>
+  </div>
+</div>
 
 <script src="/javascript/edit-activity.js"></script>
 <script src="/javascript/delete-activity.js"></script>
