--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,4 @@
-
-{{!-- <h3 class="ui center aligned header" id="category-header">Trending</h3>
+<h3 class="ui center aligned header" id="category-header">Trending</h3>
 <div class="ui stackable two column divided grid container">
   <div class="row">
     <div class="column">
@@ -17,7 +16,7 @@
       </div>
     </div>
   </div>
-</div> --}}
+</div>
 
 <div class="postbox">
     <div class="col-lg-12">
