homepage ui update

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,23 @@
+<h3 class="ui center aligned header" id="category-header">Trending</h3>
+<div class="ui stackable two column divided grid container">
+  <div class="row">
+    <div class="column">
+      <div class="ui-segment">
+            <a href="/outdoor">
+                <h4> #Outdoor Actvities</h4>
+            </a>
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui-segment">
+            <a href="/virtual">
+                <h4>#Virtual Actvities</h4>
+            </a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="postbox">
     <div class="col-lg-12">
         {{#each posts as |post|}}
